crates/airyc-codegen/src/snapshots/airyc_codegen__test__array_initialize.snap
---
source: crates/airyc-codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

@a = constant [3 x i32] zeroinitializer
@b = constant [2 x [3 x [4 x i32]]] [[3 x [4 x i32]] [[4 x i32] [i32 1, i32 2, i32 3, i32 4], [4 x i32] [i32 5, i32 0, i32 0, i32 0], [4 x i32] [i32 6, i32 0, i32 0, i32 0]], [3 x [4 x i32]] [[4 x i32] [i32 7, i32 8, i32 0, i32 0], [4 x i32] zeroinitializer, [4 x i32] zeroinitializer]]
@c = global i32 8
@d = constant [2 x float] [float 0x3FF1C28F60000000, float 0.000000e+00]
@e = global float 0x3FF1C28F60000000
@g = global [2 x i32] [i32 1, i32 2]

declare i32 @getint()

declare i32 @getch()

declare i32 @getarray(ptr)

declare void @putint(i32)

declare void @putch(i32)

declare void @putarray(i32, ptr)

declare void @starttime()

declare void @stoptime()

define i32 @main() {
entry:
  %b = alloca [2 x i32], align 4
  %a = alloca [3 x i32], align 4
  store [3 x i32] [i32 1, i32 2, i32 3], ptr %a, align 4
  store [2 x i32] zeroinitializer, ptr %b, align 4
  %idx.gep = getelementptr [2 x i32], ptr %b, i32 0, i32 0
  store i32 1, ptr %idx.gep, align 4
  %idx.gep1 = getelementptr [3 x i32], ptr %a, i32 0, i32 1
  %a2 = load i32, ptr %idx.gep1, align 4
  %idx.gep3 = getelementptr [2 x i32], ptr %b, i32 0, i32 1
  store i32 %a2, ptr %idx.gep3, align 4
  ret i32 0
}
