crates/airyc-codegen/src/snapshots/airyc_codegen__test__const_init.snap
---
source: crates/airyc-codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

@x = constant i32 233
@y = constant i32 234

declare i32 @getint()

declare i32 @getch()

declare i32 @getarray(ptr)

declare void @putint(i32)

declare void @putch(i32)

declare void @putarray(i32, ptr)

declare void @starttime()

declare void @stoptime()
