crates/airyc-codegen/src/snapshots/airyc_codegen__test__if_stmt.snap
---
source: crates/airyc-codegen/src/test.rs
expression: try_it(code)
---
; ModuleID = 'main'
source_filename = "main"

declare i32 @getint()

declare i32 @getch()

declare i32 @getarray(ptr)

declare void @putint(i32)

declare void @putch(i32)

declare void @putarray(i32, ptr)

declare void @starttime()

declare void @stoptime()

define i32 @main() {
entry:
  %x = alloca i32, align 4
  store i32 0, ptr %x, align 4
  %x1 = load i32, ptr %x, align 4
  %gt = icmp sgt i32 %x1, 1
  %bool_ext = zext i1 %gt to i32
  %inttobool = icmp ne i32 %bool_ext, 0
  br i1 %inttobool, label %then, label %else

then:                                             ; preds = %entry
  %x2 = load i32, ptr %x, align 4
  %gt3 = icmp sgt i32 %x2, 2
  %bool_ext4 = zext i1 %gt3 to i32
  %inttobool8 = icmp ne i32 %bool_ext4, 0
  br i1 %inttobool8, label %then5, label %else6

else:                                             ; preds = %entry
  store i32 6, ptr %x, align 4
  br label %merge

merge:                                            ; preds = %else, %merge7
  ret i32 0

then5:                                            ; preds = %then
  store i32 3, ptr %x, align 4
  br label %merge7

else6:                                            ; preds = %then
  %x9 = load i32, ptr %x, align 4
  %gt10 = icmp sgt i32 %x9, 3
  %bool_ext11 = zext i1 %gt10 to i32
  %inttobool15 = icmp ne i32 %bool_ext11, 0
  br i1 %inttobool15, label %then12, label %else13

merge7:                                           ; preds = %merge14, %then5
  br label %merge

then12:                                           ; preds = %else6
  store i32 4, ptr %x, align 4
  br label %merge14

else13:                                           ; preds = %else6
  store i32 5, ptr %x, align 4
  br label %merge14

merge14:                                          ; preds = %else13, %then12
  br label %merge7
}
